--- a/code/analysis.Rmd
+++ b/code/analysis.Rmd
@@ -1925,8 +1925,8 @@ parallel.trends.set
 ## Again, with did2s
 ```{r}
 did2s(
-      data = df.spill2, 
-      yname = "MCD.z", 
+      data = df.spill2 , 
+      yname = "Total.Hours", 
       treatment = "Tx",
         first_stage = ~ 0 | Zip + Year + D, 
         second_stage = ~ i(Tx, ref = FALSE) + as.numeric(Dist / 10) + I(Tx *as.numeric(Dist / 10)),
@@ -1934,6 +1934,18 @@ did2s(
       verbose = FALSE
     )
 
+spill.es <- event_study(data = df.spill2,# %>% filter(ZipFilter == 2), 
+  yname = "Total.Hours", idname = "Zip", tname = "Year", gname = "Att", estimator = "all", xformla = ~1) 
+
+
+
+spill.es %>% 
+  filter(estimator %notin% c("Borusyak, Jaravel, Spiess (2021)")) %>% 
+  filter(abs(term) <= 3) %>% 
+  ggplot(aes(x = term, y = estimate, color = estimator)) + geom_point(position = position_dodge(0.9)) + geom_errorbar(aes(ymin=estimate-1.96*std.error, ymax=estimate+1.96*std.error), width=.2, position = position_dodge(0.9))  + 
+  #facet_wrap(~V1, scales = "free_y", ncol = 3) + 
+  theme_tufte_revised() + geom_vline(xintercept=-0.5, color="red", linetype="dashed", alpha=.5) + 
+  geom_hline(yintercept=0, color="black", linetype="dashed", alpha=.5) 
 
 ```
 
